<resources>
    <string name="app_name">Hour Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="saturday">Saturday:</string>
    <string name="friday">Friday:</string>
    <string name="thursday">Thursday:</string>
    <string name="wednesday">Wednesday:</string>
    <string name="tuesday">Tuesday:</string>
    <string name="monday">Monday:</string>
    <string name="inception">no date</string>
    <string name="sunday">Sunday:</string>
    <string name="startTime">Start Time:</string>
    <string name="endTime">End Time:</string>
    <string name="title_activity_settings">Settings</string>
    <string name="drawer_open">Opened drawer</string>
    <string name="drawer_close">Closed drawer</string>
    <string name="add_break">Subtract Break?</string>
    <string name="save">Save</string>
    <string name="saved">Saved!</string>
    <string name="next">Next</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="COLON">:</string>
    <string name="hours_worked">Hours Worked:</string>
    <string name="earned">Earned:</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_time_collector">TimeCollector</string>
    <string name="Break_Length">How long was your break?</string>
    <string name="minutes">&#160;minutes</string>
    <string name="notes">Notes:</string>
    <string name="notebook_hint">Enter your daily activity!</string>

    <string name="path_circle">
    M 50,50
    m -48,0
    a 48,48 0 1,0 96,0
    a 48,48 0 1,0 -96,0
  </string>
    <string name="path_face_left_eye">
    M 35,40
    m -7,0
    a 7,7 0 1,0 14,0
    a 7,7 0 1,0 -14,0
  </string>
    <string name="path_face_right_eye">
    M 65,40
    m -7,0
    a 7,7 0 1,0 14,0
    a 7,7 0 1,0 -14,0
  </string>
    <string name="path_face_mouth_sad">
    M 30,75
    Q 50,55 70,75
  </string>
    <string name="path_face_mouth_happy">
    M 30,65
    Q 50,85 70,65
  </string>
    <string name="heart">
    M25.119,2.564c12.434,0.023,18.68,5.892,24.88,17.612  c6.2-11.721,12.446-17.589,24.877-17.612c13.81-0.025,25.035,10.575,25.061,23.66c0.033,23.708-24.952,47.46-49.938,71.212  C25.016,73.685,0.03,49.932,0.064,26.224C0.085,13.14,11.309,2.539,25.119,2.564z
  </string>
    <string name="profile_photo">This is your profile image</string>
    <string name="add_your_profile_picture">Add your profile picture!</string>
    <string name="reports">Reports</string>
    <string name="import_nav">Import</string>
    <string name="settings">Settings</string>
    <string name="communicate">Communicate</string>
    <string name="profile">Profile</string>
</resources>
