<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="fill_parent"
	android:layout_width="fill_parent"
	android:layout_marginTop="12dp"
	android:weightSum="4"
	android:background="@android:color/background_light"
	android:orientation="vertical">
    <!--android:layout_gravity="center_horizontal"-->

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:gravity="center"
		android:layout_weight="1"
		android:weightSum="2">
		<Button
			android:id="@+id/currentDate"
			android:gravity="center"
			android:layout_gravity="center"
			android:textAlignment="center"
			android:drawableEnd="@drawable/ic_date_range_black_24dp"
			android:textSize="16sp"
			android:textStyle="bold"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:background="@android:drawable/dialog_holo_light_frame"
			android:layout_weight="1"
			/>
	</LinearLayout>


	<!--<TextView-->
		<!--android:id="@+id/currentDate"-->
        <!--android:textStyle="bold"-->
		<!--android:layout_width="match_parent"-->
		<!--android:layout_height="wrap_content"-->
		<!--android:textAlignment="center"-->
		<!--android:layout_gravity="center"-->
        <!--android:textSize="16sp"-->
		<!--android:text="date"/>-->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="1"
		android:weightSum="2"
		android:orientation="horizontal">

		<TextView
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textAlignment="center"
			android:paddingTop="10dp"
			android:layout_weight="1"
			android:textSize="16sp"
			android:text="@string/startTime"/>

		<TextView
			android:id="@+id/startTime"
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textAlignment="center"
			android:paddingTop="10dp"
			android:layout_weight="1"
			android:textSize="16sp"
			/>

	</LinearLayout>

	<include layout="@layout/time_picker" android:id="@+id/pickerOne" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:weightSum="2"
		android:orientation="horizontal">

		<TextView
			android:textStyle="bold"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textAlignment="center"
			android:paddingTop="10dp"
			android:textSize="16sp"
			android:layout_weight="1"
			android:text="@string/endTime"/>

		<TextView
			android:textStyle="bold"
			android:id="@+id/endTime"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textAlignment="center"
			android:paddingTop="10dp"
			android:layout_weight="1"
			android:textSize="16sp"
			/>

	</LinearLayout>
	<include layout="@layout/time_picker" android:id="@+id/pickerTwo" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:weightSum="2"
		android:orientation="horizontal">

		<TextView
			android:textStyle="bold"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:textAlignment="center"
			android:paddingTop="10dp"
			android:textSize="16sp"
			android:layout_weight="1"
			android:text="@string/hours_worked"/>

        <TextView
			android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/earned"/>



	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="2">

		<TextView
            android:id="@+id/hoursWorked"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:paddingTop="10dp"
			android:textAlignment="center"
			android:textSize="16sp"
			android:textStyle="bold" />

		<TextView
            android:id="@+id/moneyEarned"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center"
			android:layout_weight="1"
			android:paddingTop="10dp"
			android:textAlignment="center"
			android:textColor="@color/money"
			android:textSize="16sp"
			android:textStyle="bold" />

	</LinearLayout>

</LinearLayout>