<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="16">
    <!--android:background="@color/colorPrimary">-->

    <!--<TextView-->
        <!--android:id="@+id/weekLabel"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:text="@string/inception"-->
        <!--android:textAlignment="center" />-->


    <TextView
        android:id="@+id/sundayLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".75"
        android:text="@string/sunday" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <EditText
            android:id="@+id/sundayTimeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/startTime"
            android:inputType="time"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/sundayTimeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/endTime"
            android:inputType="time"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/sundayHourTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="2"
            android:gravity="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/sundayMoneyEarned"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="2"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/mondayLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".75"
        android:text="@string/monday" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <EditText
            android:id="@+id/mondayTimeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/startTime"
            android:inputType="time"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/mondayTimeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/endTime"
            android:inputType="time"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/mondayHourTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="2"
            android:gravity="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/mondayMoneyEarned"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="2"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tuesdayLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".75"
        android:text="@string/tuesday" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <EditText
            android:id="@+id/tuesdayTimeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/startTime"
            android:inputType="time"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/tuesdayTimeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/endTime"
            android:inputType="time"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tuesdayHourTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tuesdayMoneyEarned"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="2"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/wednesdayLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".75"
        android:text="@string/wednesday" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <EditText
            android:id="@+id/wednesdayTimeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/startTime"
            android:inputType="time"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/wednesdayTimeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/endTime"
            android:inputType="time"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/wednesdayHourTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/wednesdayMoneyEarned"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="2"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/thursdayLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".75"
        android:text="@string/thursday" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <EditText
            android:id="@+id/thursdayTimeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/startTime"
            android:inputType="time"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/thursdayTimeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/endTime"
            android:inputType="time"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/thursdayHourTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/thursdayMoneyEarned"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="2"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/fridayLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/friday" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <EditText
            android:id="@+id/fridayTimeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/startTime"
            android:inputType="time"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/fridayTimeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/endTime"
            android:inputType="time"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/fridayHourTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/fridayMoneyEarned"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="2"
            android:textSize="12sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/saturdayLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".75"
        android:text="@string/saturday" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:weightSum="4">

        <EditText
            android:id="@+id/saturdayTimeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/startTime"
            android:inputType="time"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/saturdayTimeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="8"
            android:hint="@string/endTime"
            android:inputType="time"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/saturdayHourTotal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="2"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/saturdayMoneyEarned"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:ems="2"
            android:textSize="12sp" />

    </LinearLayout>


</LinearLayout>


