<!--android:fitsSystemWindows="true"-->
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/CoordinatorLayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"

    >

    <!--android:fitsSystemWindows="true"-->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/main_appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"

        >

        <!--android:fitsSystemWindows="true"-->
        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            >

            <!--  android:scaleType="centerCrop"
                            android:fitsSystemWindows="true"-->
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <ImageView
                    android:id="@+id/main_backdrop"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_below="@+id/missing_image_text"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:contentDescription="@string/profile_photo"
                    android:src="@drawable/happy_to_sad_animation" />

                <TextView
                    android:id="@+id/missing_image_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:paddingBottom="10dp"
                    android:text="@string/add_your_profile_picture"
                    android:textSize="20sp" />
            </RelativeLayout>


            <android.support.v7.widget.Toolbar
                android:id="@+id/main_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:title="@string/app_name"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <!--<android.support.v4.widget.NestedScrollView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <!--&gt;-->
    <!--<include layout="@layout/content_main" />-->
    <!--</android.support.v4.widget.NestedScrollView>-->

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        app:layout_anchor="@id/main_appbar"
        app:layout_anchorGravity="bottom|right|end"
        app:srcCompat="@drawable/ic_add_white_48px"
        />
</android.support.design.widget.CoordinatorLayout>